--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     "zone.js": "0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "3.1.0",
+    "@ionic/app-scripts": "^3.1.1",
     "@ionic/cli-plugin-ionic-angular": "1.4.1",
-    "typescript": "2.4.2"
+    "typescript": "2.4.2",
+    "ws": "^3.3.2"
   },
   "description": "An Ionic project"
 }
